app/src/test/resources/programs/valid/functionWithArguments.extension
foo f(a: Int, b: Int) -> Int = {
    a + b
}

foo g(a: Int, b: Int) -> Int = {
    a - b
}

foo main() -> Int = {
    f(1, 2) + g(b=1, a=2)
}

