app/src/test/resources/programs/invalid/NotInitializingConstant.extension
foo main() -> Int = {
    let kConst: Int;
    kConst = 1337;
}
